<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Minimal Browser</string>
    <string name="footer_brand">MINIMAL BROWSER</string>

    <string name="hint_address">Search or type URL</string>

    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="action_reload">Reload</string>
    <string name="action_go">Search</string>

    <string name="menu_home">Home</string>
    <string name="menu_new_tab">New tab</string>
    <string name="menu_tabs_placeholder">Tabs</string>
    <string name="menu_tabs">Tabs (%1$d)</string>
    <string name="menu_add_shortcut">Add to home screen</string>
    <string name="menu_toggle_js">Toggle JavaScript</string>
    <string name="menu_custom_filters">Ad blocking</string>
    <string name="menu_downloads">Downloads</string>
    <string name="menu_clear">Clear cache</string>
    <string name="menu_exit">Exit</string>

    <string name="address_hint">Search or type URL</string>
    <string name="cd_back">Back</string>
    <string name="cd_forward">Forward</string>
    <string name="cd_menu">Menu</string>
    <string name="cd_tabs">Open tabs</string>
    <string name="cd_close">Close</string>
    <string name="cd_close_tab">Close tab</string>
    <string name="cd_remove_warehouse_list">Remove list</string>
    <string name="cd_more">More actions</string>
    <string name="cd_toggle_js">Toggle JavaScript for this tab</string>

    <string name="tabs_title">Tabs</string>
    <string name="tabs_new">+ New tab</string>
    <string name="tab_untitled">New Tab</string>

    <string name="exit_title">Exit Minimal Browser?</string>
    <string name="exit_message">This will close all tabs.</string>
    <string name="exit_confirm">Exit</string>

    <string name="custom_filters_subscriptions_label">Add subscription URLs</string>
    <string name="custom_filters_subscriptions_hint">One URL per line. Each is downloaded, parsed, and stored as a private ZIP in the app warehouse. Lines starting with # or ! are ignored.</string>

    <string name="custom_filters_warehouse_label">Warehouse</string>
    <string name="custom_filters_warehouse_empty">No lists cached yet. Paste URLs above and press Save.</string>

    <string name="custom_filters_blocklist_label">Custom blocklist</string>
    <string name="custom_filters_blocklist_hint">One hostname per line. Subdomains are blocked automatically. Lines starting with # or ! are ignored.</string>
    <string name="custom_filters_patterns_label">Custom URL patterns</string>
    <string name="custom_filters_patterns_hint">One URL substring per line. Any request whose URL contains it is blocked. Example: /ads/ or track?</string>
    <string name="custom_filters_stats">Active: %1$d hosts, %2$d patterns, %3$d cosmetic</string>
    <string name="custom_filters_saved">Filters saved.</string>
    <string name="custom_filters_cleared">Filters cleared</string>

    <string name="custom_cosmetics_label">Cosmetic subscriptions</string>
    <string name="custom_cosmetics_hint">EasyList-format lists (easylist.txt, easyprivacy.txt). Cosmetic rules hide ad containers. One URL per line.</string>
    <string name="custom_cosmetics_warehouse_label">Cosmetic warehouse</string>
    <string name="custom_cosmetics_warehouse_empty">No cosmetic lists cached.</string>
    
    <string name="action_save">Save</string>
    <string name="action_clear">Clear</string>

    <string name="download_started">Downloading %1$s</string>
    <string name="download_failed">Download failed</string>
    <string name="download_unsupported">This type of download isn\'t supported</string>
    <string name="download_permission_denied">Storage permission required to save files</string>
    <string name="download_no_app">No downloads app found</string>
    <string name="download_saved">Saved %1$s</string>
    <string name="download_too_big">File too large to save</string>

    <string name="shortcut_requested">Shortcut added to home screen</string>
    <string name="shortcut_unsupported">Your launcher doesn\'t support adding shortcuts</string>
    <string name="shortcut_needs_page">Open a page first</string>

    <string name="downloads_title">Downloads</string>
    <string name="downloads_clear_completed">Clear completed</string>
    <string name="downloads_empty_title">No downloads yet</string>
    <string name="downloads_empty_subtitle">Files you download will show up here</string>
    <string name="downloads_action_pause">Pause</string>
    <string name="downloads_action_resume">Resume</string>
    <string name="downloads_action_cancel">Cancel</string>
    <string name="downloads_action_retry">Retry</string>
    <string name="downloads_action_open">Open</string>
    <string name="downloads_action_share">Share</string>
    <string name="downloads_action_delete">Delete file</string>
    <string name="downloads_action_system">Show in Downloads app</string>
    <string name="downloads_status_completed">Completed</string>
    <string name="downloads_status_completed_with_size">Completed - %1$s - %2$s</string>
    <string name="downloads_status_running">Downloading</string>
    <string name="downloads_status_running_with_progress">Downloading - %1$s%% - %2$s</string>
    <string name="downloads_status_paused">Paused</string>
    <string name="downloads_status_failed">Failed (%1$s)</string>
    <string name="downloads_status_queued">Queued</string>
    <string name="downloads_delete_confirm_title">Delete file?</string>
    <string name="downloads_delete_confirm_message">This removes %1$s from your Downloads folder.</string>
    <string name="downloads_delete_confirm_yes">Delete</string>
    <string name="downloads_delete_failed">Could not delete the file</string>
    <string name="downloads_retry_failed">Could not retry download</string>
    <string name="downloads_nothing_to_clear">Nothing to clear</string>
    <string name="downloads_file_missing">File is no longer available</string>
    <string name="downloads_no_app">No app can open this file</string>
    <string name="menu_disable_site_blocking">Disable blocking on this site</string>
    <string name="menu_desktop_site">Desktop site</string>
    <string name="menu_reset_site_overrides">Reset all site settings</string>
    <string name="site_overrides_reset">All site settings cleared</string>
    <string name="menu_mobile_site">Mobile site</string>
    <string name="desktop_on_toast">Desktop site for %1$s</string>
    <string name="desktop_off_toast">Mobile site for %1$s</string>
    <string name="link_option_copy">Copy link</string>
    <string name="link_option_new_tab">Open in new tab</string>
    <string name="link_option_background_tab">Open in background</string>
    <string name="link_copied">Link copied</string>
    <string name="menu_enable_site_blocking">Enable blocking on this site</string>
    <string name="blocking_disabled_toast">Blocking off for %1$s</string>
    <string name="blocking_enabled_toast">Blocking on for %1$s</string>
    <string name="cd_block_count">Blocked on this page</string>
    <string name="blocked_count_toast">%1$d blocked on this page</string>
</resources>
